--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ h1 {
 
 
 a {
-  color: #f0db43
+  color: #f0db43;
 }
 
 figure {
@@ -101,6 +101,28 @@ aside {
   text-align: justify;
 }
 
+.challenge-container {
+    overflow: hidden;
+    position: relative;
+    width:70%;      
+    border:3px solid black;
+}
+
+.challenge-container::after {
+    padding-top: 56.25%;
+    display: block;
+    content: '';
+}
+
+.challenge-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+
 .video-container {
     overflow: hidden;
     position: relative;
@@ -133,20 +155,20 @@ aside {
 }
 
 .exercise-image{
-  background-color: #E1DED2; 
+  background-color: #293A4E; 
   border-radius: 15px;   
-  box-shadow: 3px 5px rgba(0, 0, 0, 0.5);
+  box-shadow: 3px 5px rgba(0, 0, 0, 0.3);
   min-width: 280px;
 }
 
 .solution-image{
-  background-color: #E1DED2; 
+  background-color: #293A4E; 
   border-radius: 5px;   
   padding: 5px; 
 }
 
 .past{
-  background-color: #a3acaa;
+  background-color: #aba89a;
   box-shadow: 5px 10px #262526;
   color:  black;
 }
@@ -159,7 +181,7 @@ aside {
 }
 
 .future{
-  background-color: #58355e;
+  background-color: #536E8D;
   box-shadow: 5px 10px #1F0F2D;
   color:  white;
 }
@@ -250,7 +272,7 @@ h4 {
 }
 
 h5 {
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Rubik', sans-serif;
   font-weight:700;
   font-size: 1.4rem;
   float: top;
@@ -260,8 +282,20 @@ h5 {
   border-radius: 15px;
   padding: 10px;
   display:  inline-block;
-  text-align: left;
-  box-shadow: 3px 5px rgba(0, 0, 0, 0.5);
+  text-align: center;
+  box-shadow: 3px 5px rgba(0, 0, 0, 0.3);
+}
+
+h6 {
+  font-family: 'Unica One', sans-serif;
+  font-weight:800;
+  font-size: 1.8rem;
+  text-transform: uppercase;
+  float: left;
+  color: #F4E363;
+  margin: 0px 20px 0px;
+  border-radius: 15px;
+  display:  inline-block;
 }
 
 p {
